# PythonCDT

./: CMakeLists.txt  pyproject.toml  setup.py
.github/workflows/: buildpublish.yml  cibuildwheel.yml  publish-to-test-pypi.yml  publish_TestPyPI.yml
